[Isolated Regions] [Test] Fix test configuration for 'test_iam.py::test_iam_roles'.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/configs/isolated_regions.yaml
+++ b/tests/integration-tests/configs/isolated_regions.yaml
@@ -190,6 +190,7 @@ test-suites:
         - regions: {{ REGIONS }}
           instances: {{ INSTANCES }}
           oss: {{ OSS }}
+          schedulers: {{ SCHEDULERS }}
 # This test cannot be executed in US isolated regions
 # because it makes use of build-image, which is not supported in these regions.
 #    test_iam_image.py::test_iam_roles:
