[Test] Add permission dynamodb:BatchGetItem to cluster-roles.cfn.yaml
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/iam_policies/cluster-roles.cfn.yaml
+++ b/tests/iam_policies/cluster-roles.cfn.yaml
@@ -79,6 +79,7 @@ Resources:
                   - dynamodb:GetItem
                   - dynamodb:UpdateItem
                   - dynamodb:BatchWriteItem
+                  - dynamodb:BatchGetItem
                 Resource: !Sub arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/parallelcluster-*
                 Effect: Allow
               - Action: ec2:TerminateInstances
