[Isolated Regions] [Test] Use ONDEMAND capacity instead of SPOT when in US isolated regions in test 'test_update_slurm'.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.update.yaml
@@ -42,7 +42,7 @@ Scheduling:
           Script: s3://{{ resource_bucket }}/scripts/updated_postinstall.sh # Updated parameter value
           Args:
             - DEF # Updated parameter value
-      CapacityType: SPOT # Updated parameter value
+      CapacityType: {% if "us-iso" in region %}ONDEMAND{% else %}SPOT{% endif %} # Updated parameter value
       ComputeResources:
         - Name: queue1-i1
           Instances:
