[Isolated Regions] [Test] Avoid using flexible instance type in test_efa when running in US isolated regions as the instance types used by this test are not supported by ec2:CreateFleet API.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
+++ b/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
@@ -20,8 +20,12 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: efa-enabled-i1
+          {% if "us-iso" in region %}
+          InstanceType: {{ instance }}
+          {% else %}
           Instances:
             - InstanceType: {{ instance }}
+          {% endif %}
           MaxCount: {{ max_queue_size }}
           MinCount: {{ max_queue_size }}
           DisableSimultaneousMultithreading: true
