[Isolated Regions] [Test] Update test config to use m5d.xlarge in 'test_head_node_stop'.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/configs/isolated_regions.yaml
+++ b/tests/integration-tests/configs/isolated_regions.yaml
@@ -491,7 +491,7 @@ test-suites:
     test_ephemeral.py::test_head_node_stop:
       dimensions:
         - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
+          instances: ["m5d.xlarge"]
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
   tags:
