`[cloudformation/custom_resource]` Improve output handling and validation.

--- a/cloudformation/custom_resource/cluster.yaml
+++ b/cloudformation/custom_resource/cluster.yaml
@@ -53,7 +53,9 @@ Resources:
 
   PclusterCfnFunctionLogGroup:
     Type: AWS::Logs::LogGroup
+    DeletionPolicy: Retain
     Properties:
+      RetentionInDays: 90
       LogGroupName: !Sub /aws/lambda/${PclusterCfnFunction}
 
   EventsPolicy:
@@ -106,6 +108,7 @@ Resources:
           import datetime
           import json
           import logging
+          import os
           import random
           import re
           import string
@@ -126,19 +129,38 @@ Resources:
           from crhelper import CfnResource
           helper = CfnResource()
 
-          def update_response(response):
-              logger.info(response)
-              helper.Data.update(response)
+          def drop_keys(_dict, keys):
+              return {k: v for k, v in _dict.items() if k not in keys}
+
+          def flatten(obj, path=""):
+              """Flatten a nested map using dot-notation for keys."""
+              _dict = obj if isinstance(obj, dict) else {str(i): v for i, v in enumerate(obj)}
+              ret = {path + str(k): v for k, v in _dict.items() if not isinstance(v, (dict, list))}
+              for k, v in filter(lambda x: isinstance(x[1], (dict, list)), list(_dict.items())):
+                  ret.update(flatten(v, f"{path}{k}."))
+              return ret
+
+          def update_response(data):
+              logger.info(data)
+              # create / delete responses have cluster information nested in "cluster" key,
+              # flatten that portion while keeping other keys to propagate warnings.
+              if "cluster" in data:
+                  helper.Data.update(flatten(data["cluster"]))
+                  helper.Data["validationMessages"] = json.dumps(data.get("validationMessages", []))
+              else:  # without "cluster" in the keys, this is a cluster object.
+                  helper.Data.update(flatten(data))
 
           def serialize(val):
               return utils.to_iso_timestr(val) if isinstance(val, datetime.date) else val
 
           def create_or_update(event):
               properties = event["ResourceProperties"]
+              request_type = event["RequestType"].upper()
+              helper.Data["validationMessages"] = "[]"  # default value
 
-              if event["RequestType"].upper() == "CREATE" and "ClusterName" not in properties:
+              if request_type == "CREATE" and "ClusterName" not in properties:
                   raise ValueError("Couldn't find a ClusterName in the properties.")
-              elif event["RequestType"].upper() == "UPDATE" and event["PhysicalResourceId"] != properties.get("ClusterName"):
+              elif request_type == "UPDATE" and event["PhysicalResourceId"] != properties.get("ClusterName"):
                   raise ValueError("Cannot update the ClusterName in the properties.")
 
               cluster_name = properties["ClusterName"]
@@ -146,17 +168,22 @@ Resources:
               physical_resource_id = cluster_name
 
               try:
-                  kwargs = {**{pcluster.utils.to_snake_case(k): serialize(v) for k, v in properties.items() if k not in {"ServiceToken"}}, "wait": False}
-                  func = {"CREATE": pc.create_cluster, "UPDATE": pc.update_cluster}[event["RequestType"].upper()]
+                  meta_keys = {"ServiceToken"}
+                  kwargs = {**{pcluster.utils.to_snake_case(k): serialize(v) for k, v in properties.items() if k not in meta_keys}, "wait": False}
+                  func = {"CREATE": pc.create_cluster, "UPDATE": pc.update_cluster}[request_type]
                   update_response(func(**kwargs))
               except (APIOperationException, ParameterException, TypeError)  as e:
+                  logger.info(str(e))
                   raise ValueError(str(e))
               except Exception as e:
                   message = pcluster.api.errors.exception_message(e)
-                  str_msg = encoder.JSONEncoder().encode(message)
+                  # StatusReason is truncated, so skip changeset in output, still logged below
+                  block_list = {"change_set"}
+                  str_msg = encoder.JSONEncoder().encode(drop_keys(message.to_dict(), block_list))
                   if not re.search(r"No changes found", str_msg):
-                    logger.info(f"No changes found to update: {cluster_name}")
-                    raise ValueError(str_msg)
+                      logger.info(encoder.JSONEncoder().encode(message))
+                      raise ValueError(str_msg)
+                  logger.info(f"No changes found to update: {cluster_name}")
 
               return physical_resource_id
 
@@ -170,7 +197,8 @@ Resources:
 
           @helper.delete
           def delete(event, context):
-              cluster_name = event["ResourceProperties"].get("ClusterName")
+              properties = event["ResourceProperties"]
+              cluster_name = properties.get("ClusterName")
               logger.info(f"Deleting: {cluster_name}")
               try:
                   update_response(pc.delete_cluster(cluster_name=cluster_name))
@@ -183,6 +211,7 @@ Resources:
           # Polling functionality for async CUD operations
 
           def poll(event):
+              log_group = os.getenv("AWS_LAMBDA_LOG_GROUP_NAME")
               cluster_name = event["ResourceProperties"].get("ClusterName")
               try:
                   cluster = pc.describe_cluster(cluster_name=cluster_name)
@@ -192,7 +221,8 @@ Resources:
                       update_response(cluster)
                       return cluster_name
                   elif status in {"CREATE_FAILED", "UPDATE_FAILED", "DELETE_FAILED"}:
-                      raise ValueError(f"{cluster_name} failed {event['RequestType'].upper()}. See substack for further details.")
+                      reasons = ",".join(f["failureCode"] for f in cluster.get("failures", []))
+                      raise ValueError(f"{cluster_name}: {reasons} (LogGroup: {log_group})")
 
               # If create fails and we try to roll-back (e.g. delete),
               # gracefully handle missing cluster. on the delete pathway, the
@@ -202,7 +232,7 @@ Resources:
                       # Returning a value here signifies that the delete is completed and we can stop polling
                       # not returning a value here causes cfn resource helper to keep polling.
                       return cluster_name
-                  raise ValueError(f"{cluster_name} failed {event['RequestType'].upper()}. See substack for further details.")
+                  raise ValueError(f"{cluster_name} failed {event['RequestType'].upper()}. See LogGroup: {log_group}")
 
           @helper.poll_create
           def poll_create(event, context):
@@ -226,6 +256,12 @@ Resources:
         - !Ref PclusterLayer
 
 Outputs:
-  Function:
+  ServiceToken:
     Description: Lambda for managing PCluster Resources
     Value: !GetAtt PclusterCfnFunction.Arn
+  LogGroupArn:
+    Description: ARN of LogGroup for Lambda logging
+    Value: !GetAtt PclusterCfnFunctionLogGroup.Arn
+  LambaLayerArn:
+    Description: ARN for the ParallelCluster Lambda Layer
+    Value: !Ref PclusterLayer
