remove custom actions from dna.json test fixes
Signed-off-by: Paolo Sacconier <psacc@amazon.it>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
       - id: check-symlinks
       - id: end-of-file-fixer
       - id: pretty-format-json
+        args: ['--autofix']
       - id: requirements-txt-fixer
       - id: mixed-line-ending
         args: ['--fix=no']
