`[cloudformation/custom_resource]` Tag lambda for tracking purposes.

--- a/cloudformation/custom_resource/cluster.yaml
+++ b/cloudformation/custom_resource/cluster.yaml
@@ -105,6 +105,11 @@ Resources:
   PclusterCfnFunction:
     Type: AWS::Lambda::Function
     Properties:
+      Tags:
+        - Key: "parallelcluster:version"
+          Value: !FindInMap [ParallelCluster, Constants, Version]
+        - Key: "parallelcluster:custom_resource"
+          Value: "cluster"
       FunctionName: !Sub
         - pcluster-cfn-${StackIdSuffix}
         - { StackIdSuffix: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
