Temporary comment out metric filter policy in PermissionBoundary
PermissionBoundary currently is not used in integration tests. Temporary comment it out to workaround integration test failure on creating UserRole that exceeds quota for PolicySize: 6144. Add a TODO item to recover it after refactoring PermissionBoundary policies

Signed-off-by: chenwany <chenwany@amazon.com>

--- a/tests/iam_policies/user-role.cfn.yaml
+++ b/tests/iam_policies/user-role.cfn.yaml
@@ -1047,12 +1047,12 @@ Resources:
               - cloudwatch:DeleteAlarms
               - cloudwatch:DescribeAlarms
             Resource: "*"
-          - Effect: Allow
-            Action:
-              - logs:DescribeMetricFilters
-              - logs:PutMetricFilter
-              - logs:deleteMetricFilter
-            Resource: "*"
+#          - Effect: Allow # TODO: Refactor it, comment it out now to workaround exceeds quota for PolicySize: 6144
+#            Action:
+#              - logs:DescribeMetricFilters
+#              - logs:PutMetricFilter
+#              - logs:deleteMetricFilter
+#            Resource: "*"
 
 Outputs:
   ParallelClusterUserRole:
