--- a/cloudformation/tests/test_cluster.yaml
+++ b/cloudformation/tests/test_cluster.yaml
@@ -1,6 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: >
-  AWS ParallelCluster CloudFormation Template
+Description: AWS ParallelCluster CloudFormation Cluster
 
 Parameters:
   ClusterName:
