multiple custom actions support in yaml schema
validation logic still untouched, will be addressed in a different change

Signed-off-by: Paolo Sacconier <psacc@amazon.it>

--- a/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/awsbatch.on_node_configured.yaml
+++ b/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/awsbatch.on_node_configured.yaml
@@ -8,10 +8,15 @@ HeadNode:
     KeyName: ec2-key-name
   CustomActions:
     OnNodeConfigured:
-      Script: https://test.tgz  # s3:// | https://
-      Args:
-        - arg1
-        - arg2
+      Sequence:
+        - Script: https://test.tgz  # s3:// | https://
+          Args:
+            - arg1
+            - arg2
+        - Script: https://test.tgz  # s3:// | https://
+          Args:
+            - arg1
+            - arg2
 Scheduling:
   Scheduler: awsbatch
   AwsBatchQueues:
