--- a/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/slurm.on_node_start.yaml
+++ b/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/slurm.on_node_start.yaml
@@ -24,3 +24,14 @@ Scheduling:
           InstanceType: c5.2xlarge
         - Name: compute_resource2
           InstanceType: c4.2xlarge
+      CustomActions:
+        OnNodeStart:
+          Sequence:
+            - Script: https://test.tgz  # s3:// | https://
+              Args:
+                - arg1
+                - arg2
+            - Script: https://test.tgz  # s3:// | https://
+              Args:
+                - arg1
+                - arg2
