Add validators for custom Slurm settings to test_all_validators
Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_1.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_1.yaml
@@ -45,15 +45,22 @@ Scheduling:
     Dns:
       DisableManagedDns: false
       HostedZoneId: 12345ABC
+    CustomSlurmSettingsIncludeFile: https://test.conf
   SlurmQueues:
     - Name: queue1
       CapacityType: ONDEMAND
       Networking:
         SubnetIds:
           - subnet-12345678
+      CustomSlurmSettings:
+        Param1: Value1
+        Param2: Value2
       ComputeResources:
         - Name: compute_resource1
           InstanceType: c5.xlarge
+          CustomSlurmSettings:
+            Param1: Value1
+            Param2: Value2
         - Name: compute_resource2
           InstanceType: c4.xlarge
       CustomActions:
