Add custom scripts error metric filters to cloudwatch dashboard
Add Custom script errpr metric filters for "OnNodeStartDownloadError", "OnNodeStartExecutionError", "OnNodeConfiguredDownloadError", "OnNodeConfiguredExecutionError",

Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/centos7.slurm.full.yaml
+++ b/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/centos7.slurm.full.yaml
@@ -22,6 +22,11 @@ Scheduling:
           InstanceType: c5.2xlarge
         - Name: compute_resource2
           InstanceType: c4.2xlarge
+      CustomActions:
+        OnNodeStart:
+          Script: s3://{{ resource_bucket }}/scripts/preinstall.sh
+          Args:
+            - arg1
     - Name: queue2
       Networking:
         SubnetIds:
