--- a/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/alinux2.slurm.conditional_vol.yaml
+++ b/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/alinux2.slurm.conditional_vol.yaml
@@ -32,6 +32,9 @@ Scheduling:
           MaxCount: 5
         - Name: compute_resource2
           InstanceType: c4.2xlarge
+      CustomActions:
+        OnNodeConfigured:
+          Script: s3://{{ resource_bucket }}/scripts/postinstall.sh
 SharedStorage:
   - MountDir: /my/mount/ebs1
     Name: name1
