--- a/tests/integration-tests/configs/custom_resource.yaml
+++ b/tests/integration-tests/configs/custom_resource.yaml
@@ -4,19 +4,25 @@ test-suites:
   custom_resource:
     test_cluster_custom_resource.py::test_cluster_create:
       dimensions:
-        - regions: ["us-east-2"]
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
     test_cluster_custom_resource.py::test_cluster_create_invalid:
       dimensions:
-        - regions: ["us-east-2"]
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
     test_cluster_custom_resource.py::test_cluster_update:
       dimensions:
-        - regions: ["us-east-2"]
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
     test_cluster_custom_resource.py::test_cluster_update_invalid:
       dimensions:
-        - regions: ["us-east-2"]
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
     test_cluster_custom_resource.py::test_cluster_delete_out_of_band:
       dimensions:
-        - regions: ["us-east-2"]
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
     test_cluster_custom_resource.py::test_cluster_delete_retain:
       dimensions:
-        - regions: ["us-east-2"]
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
