Add integration test for Cluster Health Metrics
Test the following errors:
EC2HealthCheckErrors,
NodeCapacityInsufficient,
NoCorrespondingInstanceErrors
ReplacementTimeoutExpiresErrors
ResumeTimeoutExpiredErrors

Signed-off-by: chenwany <chenwany@amazon.com>

--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm/pcluster.update.config.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm/pcluster.update.config.yaml
@@ -22,6 +22,7 @@ Scheduling:
         - Name: same-name-diff-queue
           Instances:
             - InstanceType: c5.xlarge
+          MinCount: 1
           MaxCount: 5
     - Name: gpu
       Networking:
