Revert "`[integ-tests/custom_resource]` Move testing to framework (#5110)"
This reverts commit ba70ca032c7ac6f2c3e45c15ba94cc5f0bff00de.

--- a/cloudformation/tests/test_cluster.yaml
+++ b/cloudformation/tests/test_cluster.yaml
@@ -18,10 +18,6 @@ Parameters:
   ServiceToken:
     Description: ARN of Lambda Function backing the Cluster Resource
     Type: String
-  Os:
-    Description: Operating system for nodes
-    Type: String
-    Default: 'alinux2'
   OnNodeConfigured:
     Description: Script to run on HeadNode configured
     Type: String
@@ -49,7 +45,7 @@ Resources:
           AmiSearchFilters:
             Owner: self
         Image:
-          Os: !Ref Os
+          Os: alinux2
         HeadNode:
           InstanceType: t2.small
           Networking:
