[Isolated Regions][Test] Replace feature name 'dashboard' with 'dashboard_and_alarms' in test config 'isolated_regions'.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/configs/isolated_regions.yaml
+++ b/tests/integration-tests/configs/isolated_regions.yaml
@@ -127,7 +127,7 @@ test-suites:
           instances: {{ INSTANCES }}
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
-  dashboard:
+  dashboard_and_alarms:
     test_dashboard.py::test_dashboard:
       dimensions:
         - regions: {{ REGIONS }}
