[Isolated Regions][Test] Replace feature name 'dashboard' with 'dashboard_and_alarms' in test config 'isolated_regions'.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/configs/isolated_regions.yaml
+++ b/tests/integration-tests/configs/isolated_regions.yaml
@@ -128,7 +128,7 @@ test-suites:
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
   dashboard_and_alarms:
-    test_dashboard.py::test_dashboard:
+    test_dashboard_and_alarms.py::test_dashboard_and_alarms:
       dimensions:
         - regions: {{ REGIONS }}
           instances: {{ INSTANCES }}
