Working on cluster_name v stack_name
Signed-off-by: David Pratt <davprat@amazon.com>

--- a/tests/integration-tests/tests/create/test_create/test_cluster_creation_with_problematic_preinstall_script/pcluster.config.yaml
+++ b/tests/integration-tests/tests/create/test_create/test_cluster_creation_with_problematic_preinstall_script/pcluster.config.yaml
@@ -31,3 +31,6 @@ Scheduling:
     Networking:
       SubnetIds:
         - {{ private_subnet_id }}
+DevSettings:
+  Cookbook:
+    ChefCookbook: s3://davprat-aws-parallelcluster-cookbook-development/parallelcluster/3.6.0/cookbooks/aws-parallelcluster-cookbook-3.6.0.tgz
