Enforcing Serial execution for Multi-nics tests and add them in release config

--- a/tests/integration-tests/tests/multiple_nics/test_multiple_nics/test_multiple_nics/pcluster.config.yaml
+++ b/tests/integration-tests/tests/multiple_nics/test_multiple_nics/test_multiple_nics/pcluster.config.yaml
@@ -1,7 +1,8 @@
 Image:
   Os: {{ os }}
 HeadNode:
-  InstanceType: {{ instance }}
+# Add multi-NIC instance type from https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-eni.html  
+  InstanceType: r6in.metal
   Networking:
     SubnetId: {{ public_subnet_id }}
     ElasticIp: true
