Adds AWS Budgets support to the configuration file
Enables the creation of AWS Budgets using the cluster configuration file

Creates schema and configuration for the necessary fields when creating a list of AWS Cost Budgets. Generates the CloudFormation template for the list of budgets in the configuration. Some field validation also added, to ensure proper functionality.

Unit tests added for the validation of the budget schema.

Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cli/tests/pcluster/example_configs/awsbatch.full.yaml
+++ b/cli/tests/pcluster/example_configs/awsbatch.full.yaml
@@ -102,6 +102,28 @@ Monitoring:
     CloudWatch:
       Enabled: true
 CustomS3Bucket: String
+Budgets:
+  - Name: budget1
+    BudgetLimitAmount: 30.0
+    TimeUnit: MONTHLY
+    Tags:
+      - Key: user:parallelcluster:cluster-name
+        Value: budget3
+      - Key: user:parallelcluster:node-type
+        Value: HeadNode
+      - Key: user:parallelcluster:queue-name
+        Value: my_queue_name
+      - Key: user:parallelcluster:compute-resource-name
+        Value: my_compute-resource-name
+    NotificationsWithSubscribers:
+      - Notification:
+          Threshold: 40.0
+          NotificationType: ACTUAL
+        Subscribers:
+          - SubscriptionType: EMAIL
+            Address: example1@email.com
+          - SubscriptionType: SNS
+            Address: example@email.com
 Tags:
   - Key: String
     Value: String
