Add integration test for idle nodes
Signed-off-by: David Pratt <davprat@amazon.com>

--- a/tests/integration-tests/tests/dashboard_and_alarms/test_structured_log_events/test_custom_compute_action_failure/pcluster.config.yaml
+++ b/tests/integration-tests/tests/dashboard_and_alarms/test_structured_log_events/test_custom_compute_action_failure/pcluster.config.yaml
@@ -21,6 +21,16 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+    - Name: queue-2
+      ComputeResources:
+        - Name: compute-b
+          Instances:
+            - InstanceType: {{ instance }}
+          MinCount: 0
+          MaxCount: 2
+      Networking:
+        SubnetIds:
+          - {{ private_subnet_id }}
       Iam:
         S3Access:
           - BucketName: {{ bucket }}
