Remove alinux2 from test_efa in redhat8 config to avoid ice with p4d
Signed-off-by: Francesco Giordano <giordafr@amazon.it>

--- a/tests/integration-tests/configs/redhat8.yaml
+++ b/tests/integration-tests/configs/redhat8.yaml
@@ -126,7 +126,7 @@ test-suites:
           schedulers: ["slurm"]
         - regions: ["use1-az6"]   # do not move, unless capacity reservation is moved as well
           instances: ["p4d.24xlarge"]
-          oss: ["alinux2", "rhel8"]
+          oss: ["rhel8"]
           schedulers: ["slurm"]
         - regions: ["us-east-1"]
           instances: ["c6gn.16xlarge"]
