Add support for custom tags at queue level
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cli/tests/pcluster/config/test_config_patch/test_single_param_change/pcluster.config.yaml
+++ b/cli/tests/pcluster/config/test_config_patch/test_single_param_change/pcluster.config.yaml
@@ -33,6 +33,11 @@ Scheduling:
           MaxCount: {{max_count}}
       Image:
         CustomAmi: {{queue_custom_ami}}
+      {% if queue_tag_value %}
+      Tags:
+        - Key: tag1
+          Value: {{queue_tag_value}}
+      {% endif %}
 SharedStorage:
   - MountDir: vol1
     Name: ebs1
